force-app/main/default/objects/sma__MAScheduledJob__c/sma__MAScheduledJob__c.object-meta.xml
<CustomObject>
    <label>MapAnything Scheduled Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>