force-app/main/default/objects/sma__MAScheduledJob__c/fields/sma__ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>sma__ApexClassName__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>