force-app/main/default/objects/sma__MAScheduledJob__c/fields/sma__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>sma__BaseObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object</label>
    <referenceTo>sma__MABaseObject__c</referenceTo>
    <relationshipLabel>MapAnything Scheduled Jobs</relationshipLabel>
    <relationshipName>ScheduledJobs</relationshipName>
    <type>Lookup</type>
</CustomField>