force-app/main/default/objects/sma__MAScheduledJob__c/fields/sma__JobId__c.field-meta.xml
<CustomField>
    <fullName>sma__JobId__c</fullName>
    <label>JobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>